# beancount-black

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
beancount_black/: formater.py  formatter.py  main.py
tests/: conftest.py  test_formatter.py  test_main.py
tests/fixtures/expected_output/: balance.bean  column_width.bean  cost_and_price.bean  header_comments.bean  metadata_items.bean  number_expr.bean  oneline.bean  sections.bean  simple.bean  tailing_comment.bean  tailing_comments.bean  txn.bean
tests/fixtures/input/: balance.bean  column_width.bean  cost_and_price.bean  header_comments.bean  metadata_items.bean  number_expr.bean  oneline.bean  sections.bean  simple.bean  tailing_comment.bean  tailing_comments.bean  txn.bean
