[tool.poetry]
name = "beancount-black"
version = "0.1.14"
description = "Opinioned code formatter, just like Python's black code formatter but for Beancount"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"
repository = "https://github.com/LaunchPlatform/beancount-black"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beancount-parser = ">= 0.1.23, <0.2.0"
click = ">=7.0.0, <9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
bean-black = 'beancount_black.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
